--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Student Management System - Profile</title>
+  <title>Student Management System - About</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -15,11 +15,9 @@
   </nav>
 
   <div class="container">
-    <h2>Student Profile</h2>
-    <p><strong>Name:</strong> John Doe</p>
-    <p><strong>Email:</strong> johndoe@example.com</p>
-    <p><strong>Course:</strong> Computer Science</p>
-    <p><strong>Year:</strong> 2nd Year</p>
+    <h2>About This System</h2>
+    <p>This is a simple, static Student Management System example built using HTML and CSS. It demonstrates basic pages such as login, registration, student list, and profile without backend logic.</p>
+    <p>For full functionality, you would need to connect this frontend to a backend server with database support.</p>
   </div>
 </body>
 </html>
