--- a/registration.html
+++ b/registration.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Student Management System - Login</title>
+  <title>Student Management System - Registration</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -15,11 +15,20 @@
   </nav>
 
   <div class="container">
-    <h2>Login</h2>
+    <h2>Register New Student</h2>
     <form>
+      <input type="text" placeholder="Full Name" required />
       <input type="email" placeholder="Email" required />
       <input type="password" placeholder="Password" required />
-      <button type="submit">Login</button>
+      <input type="text" placeholder="Course" required />
+      <select required>
+        <option value="" disabled selected>Select Year</option>
+        <option value="1">1st Year</option>
+        <option value="2">2nd Year</option>
+        <option value="3">3rd Year</option>
+        <option value="4">4th Year</option>
+      </select>
+      <button type="submit">Register</button>
     </form>
   </div>
 </body>
